added javascript and animations - WIP

--- a/history.html
+++ b/history.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <script src="main.js"></script>
     <header>
         <div class="headertitle">
             <h1>STEN SAX PÅSE!</h1>
@@ -33,29 +32,24 @@
     </nav>
 
 
-    <div id="historyContainer1">
-        <p id="history1">Visste du att: <br> Sten, sax, påse är ett mycket gammalt tidsfördriv. Enligt flera källor
-            uppfanns spelet i Kina någon gång mellan 206 år f.kr. och 220 e.kr.?</p>
-        <p id="history2">Visste du att: <br> Påse är det drag som används mest sällan av människor.</p>
-        <p id="history3">Visste du att: <br> Män oftast inleder med sten medan kvinnor tenderar att inleda med sax?</p>
-        <p id="history3">Visste du att: <br> Den öppna handen benämns "papper" i både Japan och de flesta västerländska
-            länder, medan bl.a. Kina och Sverige benämner draget "påse"?</p>
-            </div>
+    <div id="historyContainer">
+        <button id="history1">Visste du att: <br><br> Sten, sax, påse är ett mycket gammalt tidsfördriv. Enligt flera källor
+            uppfanns spelet i Kina någon gång mellan 206 år f.kr. och 220 e.kr.?</button>
 
-    <div id="historyContainer2">
-        <p>Visste du att: <br> Män oftast inleder med sten medan kvinnor tenderar att inleda med sax?
-        </p>
+        <button id="history2">Visste du att: <br><br> Påse är det drag som används mest sällan av människor.</button>
+
+        <button id="history3">Visste du att: <br><br> Män oftast inleder med sten medan kvinnor tenderar att inleda med sax?</button>
+
+        <button id="history4">Visste du att: <br><br> Den öppna handen benämns "papper" i både Japan och de flesta västerländska
+            länder, medan bl.a. Kina och Sverige benämner draget "påse"?</button>
     </div>
-    <div id="historyContainer3">
-        <p>Visste du att: <br> Den öppna handen benämns "papper" i både Japan och de flesta västerländska
-            länder, medan bl.a. Kina och Sverige benämner draget "påse"?</p></p>
-    </div> </div>
-
 
 
     <footer>
-        <p class="footerText">Ett spel av Tina Strömberg© 2022</p>
+        <p class="footerText">Ett spel av Tina Strömberg 2022</p>
     </footer>
+
+    <script src="main.js"></script>
 
 
 </body>
