--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
     <div id="homecontainer">
         <img id="handGif" src="./images/rock-scissors-paper.gif" alt="Gif depicting hands doing rock paper scissors">
-        <button id="newGame" type="button">Nytt spel</button>
+        <button id="newGameButton" type="button" onclick="window.location.href='newgame.html'">Nytt spel</button>
 
     </div>
 
     <footer>
-        <p class="footerText">Ett spel av Tina Strömberg© 2022</p>
+        <p class="footerText">Ett spel av Tina Strömberg 2022</p>
     </footer>
 
 
