fixed many details - almost finished

--- a/history.html
+++ b/history.html
@@ -15,32 +15,32 @@
             <h1>STEN SAX PÅSE!</h1>
         </div>
     </header>
-    <nav id="navbar">
-        <a href="index.html" class="navItems">🏠 Hem</a>
-        <a href="newgame.html" class="navItems">🎮 Nytt spel</a>
-        <a href="rules.html" class="navItems">📃 Regler</a>
-        <a href="history.html" class="navItems">🤓 Onödigt vetande</a>
-        <a href="statistics.html" class="navItems"> 🥇 Statistik</a>
+    <nav>
+        <a href="home.html" class="nav-items"><img class="nav-picture" src="./images/hus.png" alt="Ikon föreställande hemknapp/hus"> <p class="nav-word">Hem</p></a>
+        <a href="newgame.html" class="nav-items"><img class="nav-picture" src="./images/spel.png" alt="Ikon föreställande handkontroll"> <p class="nav-word">Nytt spel</p></a>
+        <a href="rules.html" class="nav-items"><img class="nav-picture" src="./images/clipboard.png" alt="Ikon föreställande clipboard med checklista"> <p class="nav-word">Regler</p></a>
+        <a href="history.html" class="nav-items"><img class="nav-picture" src="./images/lightbulb.png" alt="Ikon föreställande lysande glödlampa"> <p class="nav-word">Onödigt vetande</p></a>
+        <a href="statistics.html" class="nav-items"><img class="nav-picture" src="./images/trophy.png" alt="Ikon föreställande trofé"> <p class="nav-word">Statistik</p></a>
     </nav>
 
-    <nav class="smallNav">
-        <a href="index.html" class="navSymbols">🏠</a>
-        <a href="newgame.html" class="navSymbols">🎮</a>
-        <a href="rules.html" class="navSymbols">📃</a>
-        <a href="history.html" class="navSymbols">🤓</a>
-        <a href="statistics.html" class="navSymbols">🥇</a>
+    <nav class="small-nav">
+        <a href="home.html" class="small-nav-icon"><img class="nav-picture" src="./images/hus.png" alt="Ikon föreställande hemknapp/hus"></a>
+        <a href="newgame.html" class="small-nav-icon"><img class="nav-picture" src="./images/spel.png" alt="Ikon föreställande handkontroll"></a>
+        <a href="rules.html" class="small-nav-icon"><img class="nav-picture" src="./images/clipboard.png" alt="Ikon föreställande clipboard med checklista"></a>
+        <a href="history.html" class="small-nav-icon"><img class="nav-picture" src="./images/lightbulb.png" alt="Ikon föreställande lysande glödlampa"></a>
+        <a href="statistics.html" class="small-nav-icon"><img class="nav-picture" src="./images/trophy.png" alt="Ikon föreställande trofé"></a>
     </nav>
 
 
-    <div id="historyContainer">
-        <button id="history1">Visste du att: <br><br> Sten, sax, påse är ett mycket gammalt tidsfördriv. Enligt flera källor
+    <div id="history-container">
+        <button class="history-button" id="history1">Visste du att: <br><br> Sten, sax, påse är ett mycket gammalt tidsfördriv. Enligt flera källor
             uppfanns spelet i Kina någon gång mellan 206 år f.kr. och 220 e.kr.?</button>
 
-        <button id="history2">Visste du att: <br><br> Påse är det drag som används mest sällan av människor.</button>
+        <button class="history-button" id="history2">Visste du att: <br><br> Påse är det drag som används mest sällan av människor.</button>
 
-        <button id="history3">Visste du att: <br><br> Män oftast inleder med sten medan kvinnor tenderar att inleda med sax?</button>
+        <button class="history-button" id="history3">Visste du att: <br><br> Män oftast inleder med sten medan kvinnor tenderar att inleda med sax?</button>
 
-        <button id="history4">Visste du att: <br><br> Den öppna handen benämns "papper" i både Japan och de flesta västerländska
+        <button class="history-button" id="history4">Visste du att: <br><br> Den öppna handen benämns "papper" i både Japan och de flesta västerländska
             länder, medan bl.a. Kina och Sverige benämner draget "påse"?</button>
     </div>
 
