--- a/statistics.html
+++ b/statistics.html
@@ -15,26 +15,26 @@
             <h1>STEN SAX PÅSE!</h1>
         </div>
     </header>
-    <nav id="navbar">
-        <a href="index.html" class="navItems">🏠 Hem</a>
-        <a href="newgame.html" class="navItems">🎮 Nytt spel</a>
-        <a href="rules.html" class="navItems">📃 Regler</a>
-        <a href="history.html" class="navItems">🤓 Onödigt vetande</a>
-        <a href="statistics.html" class="navItems"> 🥇 Statistik</a>
+    <nav>
+        <a href="home.html" class="nav-items"><img class="nav-picture" src="./images/hus.png" alt="Ikon föreställande hemknapp/hus"> <p class="nav-word">Hem</p></a>
+        <a href="newgame.html" class="nav-items"><img class="nav-picture" src="./images/spel.png" alt="Ikon föreställande handkontroll"> <p class="nav-word">Nytt spel</p></a>
+        <a href="rules.html" class="nav-items"><img class="nav-picture" src="./images/clipboard.png" alt="Ikon föreställande clipboard med checklista"> <p class="nav-word">Regler</p></a>
+        <a href="history.html" class="nav-items"><img class="nav-picture" src="./images/lightbulb.png" alt="Ikon föreställande lysande glödlampa"> <p class="nav-word">Onödigt vetande</p></a>
+        <a href="statistics.html" class="nav-items"><img class="nav-picture" src="./images/trophy.png" alt="Ikon föreställande trofé"> <p class="nav-word">Statistik</p></a>
     </nav>
 
-    <nav class="smallNav">
-        <a href="index.html" class="navSymbols">🏠</a>
-        <a href="newgame.html" class="navSymbols">🎮</a>
-        <a href="rules.html" class="navSymbols">📃</a>
-        <a href="history.html" class="navSymbols">🤓</a>
-        <a href="statistics.html" class="navSymbols">🥇</a>
+    <nav class="small-nav">
+        <a href="home.html" class="small-nav-icon"><img class="nav-picture" src="./images/hus.png" alt="Ikon föreställande hemknapp/hus"></a>
+        <a href="newgame.html" class="small-nav-icon"><img class="nav-picture" src="./images/spel.png" alt="Ikon föreställande handkontroll"></a>
+        <a href="rules.html" class="small-nav-icon"><img class="nav-picture" src="./images/clipboard.png" alt="Ikon föreställande clipboard med checklista"></a>
+        <a href="history.html" class="small-nav-icon"><img class="nav-picture" src="./images/lightbulb.png" alt="Ikon föreställande lysande glödlampa"></a>
+        <a href="statistics.html" class="small-nav-icon"><img class="nav-picture" src="./images/trophy.png" alt="Ikon föreställande trofé"></a>
     </nav>
 
 
-    <div id="statsContainer">
+    <div id="stats-container">
 
-        <table id="statsTable">
+        <table id="stats-table">
             <thead>
                 <tr>
                     <th colspan="4">Statistik</th>
@@ -47,12 +47,12 @@
                 </tr>
 
                 <tr>
-                    <td id="statsPlayer">0</td>
-                    <td id="statsComputer">0</td>
+                    <td id="stats-player">0</td>
+                    <td id="stats-computer">0</td>
                 </tr>
 
                 <tr>
-                    <td colspan="4"><button id="refreshButton"><p id="refreshText">Uppdatera statistiken</p></button></td>   
+                    <td colspan="4"><button id="refresh-button"><p id="refresh-text">Nollställ statistiken</p></button></td>   
             </tr>
         </table>
 
