finishing touches - complete project

--- a/rules.html
+++ b/rules.html
@@ -15,24 +15,44 @@
             <h1>STEN SAX PÅSE!</h1>
         </div>
     </header>
+
     <nav>
-        <a href="home.html" class="nav-items"><img class="nav-picture" src="./images/hus.png" alt="Ikon föreställande hemknapp/hus"> <p class="nav-word">Hem</p></a>
-        <a href="newgame.html" class="nav-items"><img class="nav-picture" src="./images/spel.png" alt="Ikon föreställande handkontroll"> <p class="nav-word">Nytt spel</p></a>
-        <a href="rules.html" class="nav-items"><img class="nav-picture" src="./images/clipboard.png" alt="Ikon föreställande clipboard med checklista"> <p class="nav-word">Regler</p></a>
-        <a href="history.html" class="nav-items"><img class="nav-picture" src="./images/lightbulb.png" alt="Ikon föreställande lysande glödlampa"> <p class="nav-word">Onödigt vetande</p></a>
-        <a href="statistics.html" class="nav-items"><img class="nav-picture" src="./images/trophy.png" alt="Ikon föreställande trofé"> <p class="nav-word">Statistik</p></a>
+        <a href="home.html" class="nav-items"><img class="nav-picture" src="./images/hus.png"
+                alt="Ikon föreställande hemknapp/hus">
+            <p class="nav-word">Hem</p>
+        </a>
+        <a href="newgame.html" class="nav-items"><img class="nav-picture" src="./images/spel.png"
+                alt="Ikon föreställande handkontroll">
+            <p class="nav-word">Nytt spel</p>
+        </a>
+        <a href="rules.html" class="nav-items"><img class="nav-picture" src="./images/clipboard.png"
+                alt="Ikon föreställande clipboard med checklista">
+            <p class="nav-word">Regler</p>
+        </a>
+        <a href="history.html" class="nav-items"><img class="nav-picture" src="./images/lightbulb.png"
+                alt="Ikon föreställande lysande glödlampa">
+            <p class="nav-word">Onödigt vetande</p>
+        </a>
+        <a href="statistics.html" class="nav-items"><img class="nav-picture" src="./images/trophy.png"
+                alt="Ikon föreställande trofé">
+            <p class="nav-word">Statistik</p>
+        </a>
     </nav>
 
     <nav class="small-nav">
-        <a href="home.html" class="small-nav-icon"><img class="nav-picture" src="./images/hus.png" alt="Ikon föreställande hemknapp/hus"></a>
-        <a href="newgame.html" class="small-nav-icon"><img class="nav-picture" src="./images/spel.png" alt="Ikon föreställande handkontroll"></a>
-        <a href="rules.html" class="small-nav-icon"><img class="nav-picture" src="./images/clipboard.png" alt="Ikon föreställande clipboard med checklista"></a>
-        <a href="history.html" class="small-nav-icon"><img class="nav-picture" src="./images/lightbulb.png" alt="Ikon föreställande lysande glödlampa"></a>
-        <a href="statistics.html" class="small-nav-icon"><img class="nav-picture" src="./images/trophy.png" alt="Ikon föreställande trofé"></a>
+        <a href="home.html" class="small-nav-icon"><img class="nav-picture" src="./images/hus.png"
+                alt="Ikon föreställande hemknapp/hus"></a>
+        <a href="newgame.html" class="small-nav-icon"><img class="nav-picture" src="./images/spel.png"
+                alt="Ikon föreställande handkontroll"></a>
+        <a href="rules.html" class="small-nav-icon"><img class="nav-picture" src="./images/clipboard.png"
+                alt="Ikon föreställande clipboard med checklista"></a>
+        <a href="history.html" class="small-nav-icon"><img class="nav-picture" src="./images/lightbulb.png"
+                alt="Ikon föreställande lysande glödlampa"></a>
+        <a href="statistics.html" class="small-nav-icon"><img class="nav-picture" src="./images/trophy.png"
+                alt="Ikon föreställande trofé"></a>
     </nav>
 
     <div id="rules">
-
         <div id="rules-container">
             <p class="rules-text">Sten, sax, påse är ett enkelt spel att spela. Välj ett av alternativen, vänta på att
                 datorn gör sitt drag och se vem som vann. Först till tre poäng vinner. Lycka till!</p>
@@ -46,10 +66,7 @@
                 alt="Video på två barn som förklarar regler för sten, sax, påse">
             Your browser does not support the video tag.
         </video>
-
     </div>
-
-
 
     <footer>
         <p class="footerText">Ett spel av Tina Strömberg 2022</p>
