--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sten Sax Påse</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
-<script src="main.js"></script>
 
 <body>
     <header>
@@ -18,34 +18,51 @@
     </header>
 
     <nav>
-        <a href="home.html" class="nav-items"><img class="nav-picture" src="./images/hus.png" alt="Ikon föreställande hemknapp/hus"> <p class="nav-word">Hem</p></a>
-        <a href="newgame.html" class="nav-items"><img class="nav-picture" src="./images/spel.png" alt="Ikon föreställande handkontroll"> <p class="nav-word">Nytt spel</p></a>
-        <a href="rules.html" class="nav-items"><img class="nav-picture" src="./images/clipboard.png" alt="Ikon föreställande clipboard med checklista"> <p class="nav-word">Regler</p></a>
-        <a href="history.html" class="nav-items"><img class="nav-picture" src="./images/lightbulb.png" alt="Ikon föreställande lysande glödlampa"> <p class="nav-word">Onödigt vetande</p></a>
-        <a href="statistics.html" class="nav-items"><img class="nav-picture" src="./images/trophy.png" alt="Ikon föreställande trofé"> <p class="nav-word">Statistik</p></a>
+        <a href="home.html" class="nav-items"><img class="nav-picture" src="./images/hus.png"
+                alt="Ikon föreställande hemknapp/hus">
+            <p class="nav-word">Hem</p>
+        </a>
+        <a href="newgame.html" class="nav-items"><img class="nav-picture" src="./images/spel.png"
+                alt="Ikon föreställande handkontroll">
+            <p class="nav-word">Nytt spel</p>
+        </a>
+        <a href="rules.html" class="nav-items"><img class="nav-picture" src="./images/clipboard.png"
+                alt="Ikon föreställande clipboard med checklista">
+            <p class="nav-word">Regler</p>
+        </a>
+        <a href="history.html" class="nav-items"><img class="nav-picture" src="./images/lightbulb.png"
+                alt="Ikon föreställande lysande glödlampa">
+            <p class="nav-word">Onödigt vetande</p>
+        </a>
+        <a href="statistics.html" class="nav-items"><img class="nav-picture" src="./images/trophy.png"
+                alt="Ikon föreställande trofé">
+            <p class="nav-word">Statistik</p>
+        </a>
     </nav>
 
     <nav class="small-nav">
-        <a href="home.html" class="small-nav-icon"><img class="nav-picture" src="./images/hus.png" alt="Ikon föreställande hemknapp/hus"></a>
-        <a href="newgame.html" class="small-nav-icon"><img class="nav-picture" src="./images/spel.png" alt="Ikon föreställande handkontroll"></a>
-        <a href="rules.html" class="small-nav-icon"><img class="nav-picture" src="./images/clipboard.png" alt="Ikon föreställande clipboard med checklista"></a>
-        <a href="history.html" class="small-nav-icon"><img class="nav-picture" src="./images/lightbulb.png" alt="Ikon föreställande lysande glödlampa"></a>
-        <a href="statistics.html" class="small-nav-icon"><img class="nav-picture" src="./images/trophy.png" alt="Ikon föreställande trofé"></a>
+        <a href="home.html" class="small-nav-icon"><img class="nav-picture" src="./images/hus.png"
+                alt="Ikon föreställande hemknapp/hus"></a>
+        <a href="newgame.html" class="small-nav-icon"><img class="nav-picture" src="./images/spel.png"
+                alt="Ikon föreställande handkontroll"></a>
+        <a href="rules.html" class="small-nav-icon"><img class="nav-picture" src="./images/clipboard.png"
+                alt="Ikon föreställande clipboard med checklista"></a>
+        <a href="history.html" class="small-nav-icon"><img class="nav-picture" src="./images/lightbulb.png"
+                alt="Ikon föreställande lysande glödlampa"></a>
+        <a href="statistics.html" class="small-nav-icon"><img class="nav-picture" src="./images/trophy.png"
+                alt="Ikon föreställande trofé"></a>
     </nav>
-
-
-    <aside></aside>
 
     <div id="homecontainer">
         <img id="hand-gif" src="./images/rock-scissors-paper.gif" alt="Gif depicting hands doing rock paper scissors">
         <button id="new-game-button" type="button" onclick="window.location.href='newgame.html'">Nytt spel</button>
-
     </div>
 
     <footer>
         <p class="footerText">Ett spel av Tina Strömberg 2022</p>
     </footer>
 
+    <script src="main.js"></script>
 
 </body>
 
