--- a/statistics.html
+++ b/statistics.html
@@ -16,19 +16,39 @@
         </div>
     </header>
     <nav>
-        <a href="home.html" class="nav-items"><img class="nav-picture" src="./images/hus.png" alt="Ikon föreställande hemknapp/hus"> <p class="nav-word">Hem</p></a>
-        <a href="newgame.html" class="nav-items"><img class="nav-picture" src="./images/spel.png" alt="Ikon föreställande handkontroll"> <p class="nav-word">Nytt spel</p></a>
-        <a href="rules.html" class="nav-items"><img class="nav-picture" src="./images/clipboard.png" alt="Ikon föreställande clipboard med checklista"> <p class="nav-word">Regler</p></a>
-        <a href="history.html" class="nav-items"><img class="nav-picture" src="./images/lightbulb.png" alt="Ikon föreställande lysande glödlampa"> <p class="nav-word">Onödigt vetande</p></a>
-        <a href="statistics.html" class="nav-items"><img class="nav-picture" src="./images/trophy.png" alt="Ikon föreställande trofé"> <p class="nav-word">Statistik</p></a>
+        <a href="home.html" class="nav-items"><img class="nav-picture" src="./images/hus.png"
+                alt="Ikon föreställande hemknapp/hus">
+            <p class="nav-word">Hem</p>
+        </a>
+        <a href="newgame.html" class="nav-items"><img class="nav-picture" src="./images/spel.png"
+                alt="Ikon föreställande handkontroll">
+            <p class="nav-word">Nytt spel</p>
+        </a>
+        <a href="rules.html" class="nav-items"><img class="nav-picture" src="./images/clipboard.png"
+                alt="Ikon föreställande clipboard med checklista">
+            <p class="nav-word">Regler</p>
+        </a>
+        <a href="history.html" class="nav-items"><img class="nav-picture" src="./images/lightbulb.png"
+                alt="Ikon föreställande lysande glödlampa">
+            <p class="nav-word">Onödigt vetande</p>
+        </a>
+        <a href="statistics.html" class="nav-items"><img class="nav-picture" src="./images/trophy.png"
+                alt="Ikon föreställande trofé">
+            <p class="nav-word">Statistik</p>
+        </a>
     </nav>
 
     <nav class="small-nav">
-        <a href="home.html" class="small-nav-icon"><img class="nav-picture" src="./images/hus.png" alt="Ikon föreställande hemknapp/hus"></a>
-        <a href="newgame.html" class="small-nav-icon"><img class="nav-picture" src="./images/spel.png" alt="Ikon föreställande handkontroll"></a>
-        <a href="rules.html" class="small-nav-icon"><img class="nav-picture" src="./images/clipboard.png" alt="Ikon föreställande clipboard med checklista"></a>
-        <a href="history.html" class="small-nav-icon"><img class="nav-picture" src="./images/lightbulb.png" alt="Ikon föreställande lysande glödlampa"></a>
-        <a href="statistics.html" class="small-nav-icon"><img class="nav-picture" src="./images/trophy.png" alt="Ikon föreställande trofé"></a>
+        <a href="home.html" class="small-nav-icon"><img class="nav-picture" src="./images/hus.png"
+                alt="Ikon föreställande hemknapp/hus"></a>
+        <a href="newgame.html" class="small-nav-icon"><img class="nav-picture" src="./images/spel.png"
+                alt="Ikon föreställande handkontroll"></a>
+        <a href="rules.html" class="small-nav-icon"><img class="nav-picture" src="./images/clipboard.png"
+                alt="Ikon föreställande clipboard med checklista"></a>
+        <a href="history.html" class="small-nav-icon"><img class="nav-picture" src="./images/lightbulb.png"
+                alt="Ikon föreställande lysande glödlampa"></a>
+        <a href="statistics.html" class="small-nav-icon"><img class="nav-picture" src="./images/trophy.png"
+                alt="Ikon föreställande trofé"></a>
     </nav>
 
 
@@ -52,8 +72,10 @@
                 </tr>
 
                 <tr>
-                    <td colspan="4"><button id="refresh-button"><p id="refresh-text">Nollställ statistiken</p></button></td>   
-            </tr>
+                    <td colspan="4"><button id="refresh-button">
+                            <p id="refresh-text">Nollställ statistiken</p>
+                        </button></td>
+                </tr>
         </table>
 
 
@@ -66,4 +88,5 @@
     <script src="main.js"></script>
 
 </body>
+
 </html>
